gateway/01-argocd-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-cluster
  namespace: main
spec:
  type: ExternalName
  externalName: build.local
  ports:
  - name: http
    port: 8080
    targetPort: 80
