gateway/02-production-cluster.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: production-cluster
  namespace: main
subsets: 
- addresses:
  - ip: "192.168.1.19"
  ports:
  - port: 80
    protocol: TCP
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: production-cluster
  namespace: main
spec:
  type: ClusterIP
  clusterIP: None
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 8080
    targetPort: 80
