gateway/02-staging-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-cluster
  namespace: main
spec:
  type: ExternalName
  externalName: staging.local
  ports:
  - name: http
    port: 8080
    targetPort: 80
